# RIG-Mesh

./: .gitignore  AGENTS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  weekly.yml
src/rig_mesh/: __init__.py  audit.py  boot.py  cli.py  dashboard.py  master.py  mcp_server.py  recovery.py  router.py  subsystems.py
src/rig_mesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_boot.py  test_dashboard.py  test_master.py  test_mcp.py  test_recovery.py  test_router_cli.py  test_smoke.py  test_subsystems.py
